--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Diseñador</a>
+          <a class="navbar-brand" href="#">Diseñador del branch test</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
 
