--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Diseñador del branch test</a>
+          <a class="navbar-brand" href="#">Diseñador del branch text</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
 
@@ -41,7 +41,7 @@
     <div class="container">
 
       <div class="page-header">
-        <h1>Diseñador <small>  de formularios del branch test</small></h1>
+        <h1>Diseñador <small>  de formularios del branch text</small></h1>
       </div>
 
         <div class="row">
