Se agregaron 2 elementos nuevos

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
               <a draggable="true" href="#" class="list-group-item">Título</a>
               <a draggable="true" href="#" class="list-group-item">Select</a>
               <a draggable="true" href="#" class="list-group-item">Radio</a>
+              <a draggable="true" href="#" class="list-group-item">nuevo 1</a>
+              <a draggable="true" href="#" class="list-group-item">nuevo 2</a>
             </div>
           </div>
 
