Se agrego nuevo elemento solamente para el branch de testeo

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
               <a draggable="true" href="#" class="list-group-item">Radio</a>
               <a draggable="true" href="#" class="list-group-item">nuevo 1</a>
               <a draggable="true" href="#" class="list-group-item">nuevo 2</a>
+              <a draggable="true" href="#" class="list-group-item">elemento del branch testeo</a>
             </div>
           </div>
 
